# fastapi-base

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
docker/: .dockerignore  backend.dockerfile  celeryworker.dockerfile  db.dockerfile  docker-compose.yml
docker/scripts/: build-push.sh  build.sh  deploy.sh
src/: .env  .env.example  .flake8  .gitignore  backend-start.sh  prestart.sh  pyproject.toml  worker-start.sh
src/alembic/: env.py
src/alembic/versions/: 06b186126593_init_db.py  16f2311615d0_add_whitelist.py  58544855b2cf_remove_trash_param.py  5acab52183fa_session_msg_add_model_type_column.py  7e50bc2dabed_add_column_language_code_to_user_session.py  96ad1ac3961e_update_session_and_msg_table.py  e148023ae1e1_session_msg_add_language.py  ee15ca92987c_update_type_of_field_created_at.py  f22a248e601f_update_user_chat_session_table.py
src/app/: application.py  backend_pre_start.py  main.py  mesLogging.py  worker.py
src/app/.ipynb_checkpoints/: main-checkpoint.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: auth.py  chat_bot.py  hello.py
src/app/core/: celery_app.py  config.py
src/app/core/auth/: auth.py
src/app/core/expert/: ethereum_expert.py
src/app/core/llm/: base_llm.py  google_gemini.py  openai_module.py
src/app/core/security/: ecdsa_auth.py  http_basic_ecdsa.py
src/app/core/tools/: rag_tools.py  sbert_ret_tools.py
src/app/db/: engine.py  init_db.py
src/app/db/models/: message_store.py  session_msg.py  user.py  user_chat_session.py  user_session.py
src/app/schemas/: auth_schemas.py  base_schemas.py  google_gemini.py  stream_schemas.py
src/app/utils/: constants.py  extend_conversation_buffer_mem.py  extend_postgres_memory.py  extend_text_splitter.py  language_OpenAIParser.py
src/celeryApp/: celery_app.py  ethereum_worker.py  pyproject.toml  worker.py
src/scripts/: lint.sh
