[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Thân Trọng Thành <trongthanht3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["email"], version = "^2.5.2"}
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"
pydantic-settings = "^2.1.0"
sqlmodel = "^0.0.14"
loguru = "^0.7.2"
tenacity = "^8.2.3"
psycopg = "^3.1.15"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
celery = "^5.3.6"
raven = "^6.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true