[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Thân Trọng Thành <trongthanht3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["email"], version = "^2.5.2"}
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"
pydantic-settings = "^2.1.0"
sqlmodel = "^0.0.14"
loguru = "^0.7.2"
tenacity = "^8.2.3"
psycopg = "^3.1.15"
psycopg2-binary = "^2.9.9"
celery = {extras = ["redis"], version = "^5.3.6"}
raven = "^6.10.0"
alembic = "^1.13.0"
ujson = "^5.9.0"
eventlet = "^0.33.3"
gevent = "^23.9.1"
langchain = "0.1.10"
langchain-google-genai = "^0.0.5"
pillow = "^10.1.0"
flower = "^2.0.1"
openai = "^1.9.0"
langchain-openai = "^0.0.3"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"
ragatouille = "^0.0.7.post9"
faiss-cpu = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
path = ".venv"
